if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()

message(STATUS "Building tests...")
set (CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall -Wextra")
set(CMAKE_CXX_FLAGS_DEBUG "-O3 -ggdb -Wall -Wextra")

add_executable(radix_sort_compare radix_sort_compare.cpp control.hpp)
target_link_libraries(radix_sort_compare PRIVATE radix_sort)

add_executable(radix_sort_prefix_par_test radix_sort_prefix_par_test.cpp control.hpp)
target_link_libraries(radix_sort_prefix_par_test PRIVATE radix_sort)
add_test(RadixSortPrefixParTest radix_sort_prefix_par_test)

add_executable(radix_sort_prefix_par_no_cache_test radix_sort_prefix_par_no_cache_test.cpp control.hpp)
target_link_libraries(radix_sort_prefix_par_no_cache_test PRIVATE radix_sort)
add_test(RadixSortPrefixParNoCacheTest radix_sort_prefix_par_no_cache_test)

add_executable(radix_sort_prefix_par_no_cache_write_back_buffer_test radix_sort_prefix_par_no_cache_write_back_buffer_test.cpp control.hpp)
target_link_libraries(radix_sort_prefix_par_no_cache_write_back_buffer_test PRIVATE radix_sort)
add_test(RadixSortPrefixParNoCacheWriteBackBufferTest radix_sort_prefix_par_no_cache_write_back_buffer_test)
